
[TestUsage/azd - 1]
Usage:
  azd [command]

Available Commands:
  config      Manage Azure Developer CLI configuration
  deploy      Deploy the application's code to Azure.
  down        Delete Azure resources for an application.
  env         Manage environments.
  infra       Manage Azure resources.
  init        Initialize a new application.
  login       Log in to Azure.
  logout      Log out of Azure
  monitor     Monitor a deployed application.
  pipeline    Manage GitHub Actions pipelines.
  provision   Provision the Azure resources for an application.
  restore     Restore application dependencies.
  template    Manage templates.
  up          Initialize application, provision Azure resources, and deploy your project with a single command.
  version     Print the version number of Azure Developer CLI.

Flags:
  -C, --cwd string   Sets the current working directory.
      --debug        Enables debugging and diagnostics logging.
  -h, --help         Gets help for azd.
      --no-prompt    Accepts the default value instead of prompting, or it fails if there is no default.

Use "azd [command] --help" for more information about a command.

---

[TestUsage/azd/config - 1]
Usage:
  azd config [command]

Available Commands:
  get         Gets a configuration
  list        Lists all configuration values
  reset       Resets configuration to default
  set         Sets a configuration
  unset       Unsets a configuration

Flags:
  -h, --help   Gets help for config.

Global Flags:
  -C, --cwd string           Sets the current working directory.
      --debug                Enables debugging and diagnostics logging.
  -e, --environment string   The name of the environment to use.
      --no-prompt            Accepts the default value instead of prompting, or it fails if there is no default.

Use "azd config [command] --help" for more information about a command.

---

[TestUsage/azd/config/get - 1]
Usage:
  azd config get <path> [flags]

Flags:
  -h, --help            Gets help for get.
  -o, --output string   The output format (the supported formats are json). (default "json")

Global Flags:
  -C, --cwd string           Sets the current working directory.
      --debug                Enables debugging and diagnostics logging.
  -e, --environment string   The name of the environment to use.
      --no-prompt            Accepts the default value instead of prompting, or it fails if there is no default.

---

[TestUsage/azd/config/list - 1]
Usage:
  azd config list [flags]

Flags:
  -h, --help            Gets help for list.
  -o, --output string   The output format (the supported formats are json). (default "json")

Global Flags:
  -C, --cwd string           Sets the current working directory.
      --debug                Enables debugging and diagnostics logging.
  -e, --environment string   The name of the environment to use.
      --no-prompt            Accepts the default value instead of prompting, or it fails if there is no default.

---

[TestUsage/azd/config/reset - 1]
Usage:
  azd config reset [flags]

Flags:
  -h, --help   Gets help for reset.

Global Flags:
  -C, --cwd string           Sets the current working directory.
      --debug                Enables debugging and diagnostics logging.
  -e, --environment string   The name of the environment to use.
      --no-prompt            Accepts the default value instead of prompting, or it fails if there is no default.

---

[TestUsage/azd/config/set - 1]
Usage:
  azd config set <path> <value> [flags]

Examples:
$ azd config set defaults.subscription <yourSubscriptionID>
$ azd config set defaults.location eastus

Flags:
  -h, --help   Gets help for set.

Global Flags:
  -C, --cwd string           Sets the current working directory.
      --debug                Enables debugging and diagnostics logging.
  -e, --environment string   The name of the environment to use.
      --no-prompt            Accepts the default value instead of prompting, or it fails if there is no default.

---

[TestUsage/azd/config/unset - 1]
Usage:
  azd config unset <path> [flags]

Examples:
$ azd config unset defaults.location

Flags:
  -h, --help   Gets help for unset.

Global Flags:
  -C, --cwd string           Sets the current working directory.
      --debug                Enables debugging and diagnostics logging.
  -e, --environment string   The name of the environment to use.
      --no-prompt            Accepts the default value instead of prompting, or it fails if there is no default.

---

[TestUsage/azd/deploy - 1]
Usage:
  azd deploy [flags]

Flags:
  -h, --help             Gets help for deploy.
  -o, --output string    The output format (the supported formats are json, none). (default "none")
      --service string   Deploys a specific service (when the string is unspecified, all services that are listed in the azure.yaml file are deployed).

Global Flags:
  -C, --cwd string           Sets the current working directory.
      --debug                Enables debugging and diagnostics logging.
  -e, --environment string   The name of the environment to use.
      --no-prompt            Accepts the default value instead of prompting, or it fails if there is no default.

---

[TestUsage/azd/down - 1]
Usage:
  azd down [flags]

Flags:
      --force           Does not require confirmation before it deletes resources.
  -h, --help            Gets help for down.
  -o, --output string   The output format (the supported formats are json, none). (default "none")
      --purge           Does not require confirmation before it permanently deletes resources that are soft-deleted by default (for example, key vaults).

Global Flags:
  -C, --cwd string           Sets the current working directory.
      --debug                Enables debugging and diagnostics logging.
  -e, --environment string   The name of the environment to use.
      --no-prompt            Accepts the default value instead of prompting, or it fails if there is no default.

---

[TestUsage/azd/env - 1]
Usage:
  azd env [command]

Available Commands:
  get-values  Get all environment values.
  list        List environments
  new         Create a new environment.
  refresh     Refresh environment settings by using information from a previous infrastructure provision.
  select      Set the default environment.
  set         Set a value in the environment.

Flags:
  -h, --help   Gets help for env.

Global Flags:
  -C, --cwd string           Sets the current working directory.
      --debug                Enables debugging and diagnostics logging.
  -e, --environment string   The name of the environment to use.
      --no-prompt            Accepts the default value instead of prompting, or it fails if there is no default.

Use "azd env [command] --help" for more information about a command.

---

[TestUsage/azd/env/get-values - 1]
Usage:
  azd env get-values [flags]

Flags:
  -h, --help            Gets help for get-values.
  -o, --output string   The output format (the supported formats are json, dotenv). (default "dotenv")

Global Flags:
  -C, --cwd string           Sets the current working directory.
      --debug                Enables debugging and diagnostics logging.
  -e, --environment string   The name of the environment to use.
      --no-prompt            Accepts the default value instead of prompting, or it fails if there is no default.

---

[TestUsage/azd/env/list - 1]
Usage:
  azd env list [flags]

Aliases:
  list, ls

Flags:
  -h, --help            Gets help for list.
  -o, --output string   The output format (the supported formats are json, table). (default "table")

Global Flags:
  -C, --cwd string           Sets the current working directory.
      --debug                Enables debugging and diagnostics logging.
  -e, --environment string   The name of the environment to use.
      --no-prompt            Accepts the default value instead of prompting, or it fails if there is no default.

---

[TestUsage/azd/env/new - 1]
Usage:
  azd env new <environment> [flags]

Flags:
  -h, --help                  Gets help for new.
  -l, --location string       Azure location for the new environment
      --subscription string   Name or ID of an Azure subscription to use for the new environment

Global Flags:
  -C, --cwd string           Sets the current working directory.
      --debug                Enables debugging and diagnostics logging.
  -e, --environment string   The name of the environment to use.
      --no-prompt            Accepts the default value instead of prompting, or it fails if there is no default.

---

[TestUsage/azd/env/refresh - 1]
Usage:
  azd env refresh [flags]

Flags:
  -h, --help            Gets help for refresh.
  -o, --output string   The output format (the supported formats are json, none). (default "none")

Global Flags:
  -C, --cwd string           Sets the current working directory.
      --debug                Enables debugging and diagnostics logging.
  -e, --environment string   The name of the environment to use.
      --no-prompt            Accepts the default value instead of prompting, or it fails if there is no default.

---

[TestUsage/azd/env/select - 1]
Usage:
  azd env select <environment> [flags]

Flags:
  -h, --help   Gets help for select.

Global Flags:
  -C, --cwd string           Sets the current working directory.
      --debug                Enables debugging and diagnostics logging.
  -e, --environment string   The name of the environment to use.
      --no-prompt            Accepts the default value instead of prompting, or it fails if there is no default.

---

[TestUsage/azd/env/set - 1]
Usage:
  azd env set <key> <value> [flags]

Flags:
  -h, --help   Gets help for set.

Global Flags:
  -C, --cwd string           Sets the current working directory.
      --debug                Enables debugging and diagnostics logging.
  -e, --environment string   The name of the environment to use.
      --no-prompt            Accepts the default value instead of prompting, or it fails if there is no default.

---

[TestUsage/azd/infra - 1]
Usage:
  azd infra [command]

Available Commands:
  create      Create Azure resources for an application.
  delete      Delete Azure resources for an application.

Flags:
  -h, --help   Gets help for infra.

Global Flags:
  -C, --cwd string           Sets the current working directory.
      --debug                Enables debugging and diagnostics logging.
  -e, --environment string   The name of the environment to use.
      --no-prompt            Accepts the default value instead of prompting, or it fails if there is no default.

Use "azd infra [command] --help" for more information about a command.

---

[TestUsage/azd/infra/create - 1]
Usage:
  azd infra create [flags]

Aliases:
  create, provision

Flags:
  -h, --help            Gets help for create.
      --no-progress     Suppresses progress information.
  -o, --output string   The output format (the supported formats are json, none). (default "none")

Global Flags:
  -C, --cwd string           Sets the current working directory.
      --debug                Enables debugging and diagnostics logging.
  -e, --environment string   The name of the environment to use.
      --no-prompt            Accepts the default value instead of prompting, or it fails if there is no default.

---

[TestUsage/azd/infra/delete - 1]
Usage:
  azd infra delete [flags]

Flags:
      --force   Does not require confirmation before it deletes resources.
  -h, --help    Gets help for delete.
      --purge   Does not require confirmation before it permanently deletes resources that are soft-deleted by default (for example, key vaults).

Global Flags:
  -C, --cwd string           Sets the current working directory.
      --debug                Enables debugging and diagnostics logging.
  -e, --environment string   The name of the environment to use.
      --no-prompt            Accepts the default value instead of prompting, or it fails if there is no default.

---

[TestUsage/azd/init - 1]
Usage:
  azd init [flags]

Flags:
  -b, --branch string         The template branch to initialize from.
  -h, --help                  Gets help for init.
  -l, --location string       Azure location for the new environment
      --subscription string   Name or ID of an Azure subscription to use for the new environment
  -t, --template string       The template to use when you initialize the project. You can use Full URI, <owner>/<repository>, or <repository> if it's part of the azure-samples organization.

Global Flags:
  -C, --cwd string           Sets the current working directory.
      --debug                Enables debugging and diagnostics logging.
  -e, --environment string   The name of the environment to use.
      --no-prompt            Accepts the default value instead of prompting, or it fails if there is no default.

---

[TestUsage/azd/login - 1]
Usage:
  azd login [flags]

Flags:
      --check-status                           Checks the log-in status instead of logging in.
      --client-certificate string              The path to the client certificate for the service principal to authenticate with.
      --client-id string                       The client id for the service principal to authenticate with.
      --client-secret string                   The client secret for the service principal to authenticate with. Set to the empty string to read the value from the console.
      --federated-credential string            The federated token for the service principal to authenticate with. Set to the empty string to read the value from the console.
      --federated-credential-provider string   The provider to use to acquire a federated token to authenticate with.
  -h, --help                                   Gets help for login.
  -o, --output string                          The output format (the supported formats are json, none). (default "none")
      --tenant-id string                       The tenant id for the service principal to authenticate with.
      --use-device-code                        When true, log in by using a device code instead of a browser.

Global Flags:
  -C, --cwd string           Sets the current working directory.
      --debug                Enables debugging and diagnostics logging.
  -e, --environment string   The name of the environment to use.
      --no-prompt            Accepts the default value instead of prompting, or it fails if there is no default.

---

[TestUsage/azd/logout - 1]
Usage:
  azd logout [flags]

Flags:
  -h, --help   Gets help for logout.

Global Flags:
  -C, --cwd string           Sets the current working directory.
      --debug                Enables debugging and diagnostics logging.
  -e, --environment string   The name of the environment to use.
      --no-prompt            Accepts the default value instead of prompting, or it fails if there is no default.

---

[TestUsage/azd/monitor - 1]
Usage:
  azd monitor [flags]

Flags:
  -h, --help       Gets help for monitor.
      --live       Open a browser to Application Insights Live Metrics. Live Metrics is currently not supported for Python applications.
      --logs       Open a browser to Application Insights Logs.
      --overview   Open a browser to Application Insights Overview Dashboard.

Global Flags:
  -C, --cwd string           Sets the current working directory.
      --debug                Enables debugging and diagnostics logging.
  -e, --environment string   The name of the environment to use.
      --no-prompt            Accepts the default value instead of prompting, or it fails if there is no default.

---

[TestUsage/azd/pipeline - 1]
Usage:
  azd pipeline [command]

Available Commands:
  config      Create and configure your deployment pipeline by using GitHub Actions.

Flags:
  -h, --help   Gets help for pipeline.

Global Flags:
  -C, --cwd string           Sets the current working directory.
      --debug                Enables debugging and diagnostics logging.
  -e, --environment string   The name of the environment to use.
      --no-prompt            Accepts the default value instead of prompting, or it fails if there is no default.

Use "azd pipeline [command] --help" for more information about a command.

---

[TestUsage/azd/pipeline/config - 1]
Usage:
  azd pipeline config [flags]

Flags:
      --auth-type string        The authentication type used between the pipeline provider and Azure for deployment (Only valid for GitHub provider)
  -h, --help                    Gets help for config.
      --principal-name string   The name of the service principal to use to grant access to Azure resources as part of the pipeline.
      --principal-role string   The role to assign to the service principal. (default "Contributor")
      --provider string         The pipeline provider to use (GitHub and Azdo supported).
      --remote-name string      The name of the git remote to configure the pipeline to run on. (default "origin")

Global Flags:
  -C, --cwd string           Sets the current working directory.
      --debug                Enables debugging and diagnostics logging.
  -e, --environment string   The name of the environment to use.
      --no-prompt            Accepts the default value instead of prompting, or it fails if there is no default.

---

[TestUsage/azd/provision - 1]
Usage:
  azd provision [flags]

Flags:
  -h, --help            Gets help for provision.
      --no-progress     Suppresses progress information.
  -o, --output string   The output format (the supported formats are json, none). (default "none")

Global Flags:
  -C, --cwd string           Sets the current working directory.
      --debug                Enables debugging and diagnostics logging.
  -e, --environment string   The name of the environment to use.
      --no-prompt            Accepts the default value instead of prompting, or it fails if there is no default.

---

[TestUsage/azd/restore - 1]
Usage:
  azd restore [flags]

Flags:
  -h, --help             Gets help for restore.
      --service string   Restores a specific service (when the string is unspecified, all services that are listed in the azure.yaml file are restored).

Global Flags:
  -C, --cwd string           Sets the current working directory.
      --debug                Enables debugging and diagnostics logging.
  -e, --environment string   The name of the environment to use.
      --no-prompt            Accepts the default value instead of prompting, or it fails if there is no default.

---

[TestUsage/azd/template - 1]
Usage:
  azd template [command]

Available Commands:
  list        List templates.
  show        Show the template details.

Flags:
  -h, --help   Gets help for template.

Global Flags:
  -C, --cwd string           Sets the current working directory.
      --debug                Enables debugging and diagnostics logging.
  -e, --environment string   The name of the environment to use.
      --no-prompt            Accepts the default value instead of prompting, or it fails if there is no default.

Use "azd template [command] --help" for more information about a command.

---

[TestUsage/azd/template/list - 1]
Usage:
  azd template list [flags]

Aliases:
  list, ls

Flags:
  -h, --help            Gets help for list.
  -o, --output string   The output format (the supported formats are json, table). (default "table")

Global Flags:
  -C, --cwd string           Sets the current working directory.
      --debug                Enables debugging and diagnostics logging.
  -e, --environment string   The name of the environment to use.
      --no-prompt            Accepts the default value instead of prompting, or it fails if there is no default.

---

[TestUsage/azd/template/show - 1]
Usage:
  azd template show <template> [flags]

Flags:
  -h, --help            Gets help for show.
  -o, --output string   The output format (the supported formats are json, table). (default "table")

Global Flags:
  -C, --cwd string           Sets the current working directory.
      --debug                Enables debugging and diagnostics logging.
  -e, --environment string   The name of the environment to use.
      --no-prompt            Accepts the default value instead of prompting, or it fails if there is no default.

---

[TestUsage/azd/up - 1]
Usage:
  azd up [flags]

Flags:
  -b, --branch string         The template branch to initialize from.
  -h, --help                  Gets help for up.
  -l, --location string       Azure location for the new environment
      --no-progress           Suppresses progress information.
  -o, --output string         The output format (the supported formats are json, none). (default "none")
      --service string        Deploys a specific service (when the string is unspecified, all services that are listed in the azure.yaml file are deployed).
      --subscription string   Name or ID of an Azure subscription to use for the new environment
  -t, --template string       The template to use when you initialize the project. You can use Full URI, <owner>/<repository>, or <repository> if it's part of the azure-samples organization.

Global Flags:
  -C, --cwd string           Sets the current working directory.
      --debug                Enables debugging and diagnostics logging.
  -e, --environment string   The name of the environment to use.
      --no-prompt            Accepts the default value instead of prompting, or it fails if there is no default.

---

[TestUsage/azd/version - 1]
Usage:
  azd version [flags]

Flags:
  -h, --help            Gets help for version.
  -o, --output string   The output format (the supported formats are json, none). (default "none")

Global Flags:
  -C, --cwd string           Sets the current working directory.
      --debug                Enables debugging and diagnostics logging.
  -e, --environment string   The name of the environment to use.
      --no-prompt            Accepts the default value instead of prompting, or it fails if there is no default.

---
